chrome/browser/component_updater/ssl_error_assistant_component_installer.cc
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/logging.h"
 #include "base/memory/ref_counted.h"
 #include "base/task/post_task.h"
+#include "chrome/browser/ssl/ssl_error_assistant.h"
 #include "chrome/browser/ssl/ssl_error_handler.h"
 #include "content/public/browser/browser_task_traits.h"
 #include "content/public/browser/browser_thread.h"
@@ -47,6 +48,16 @@ void LoadProtoFromDisk(const base::FilePath& pb_path) {
     DVLOG(1) << "Failed parsing proto " << pb_path.value();
     return;
   }
+
+  // Retrieve the default proto from the resource bundle and keep the most
+  // recent version. This is required since the component updater may still have
+  // an older version.
+  std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> default_proto =
+      SSLErrorAssistant::GetErrorAssistantProtoFromResourceBundle();
+  if (default_proto && default_proto->version_id() > proto->version_id()) {
+    proto = std::move(default_proto);
+  }
+
   base::CreateSingleThreadTaskRunnerWithTraits({content::BrowserThread::UI})
       ->PostTask(FROM_HERE,
                  base::BindOnce(&SSLErrorHandler::SetErrorAssistantProto,
