chrome/browser/ssl/ssl_browsertest.cc
@@ -191,7 +191,7 @@ namespace {
 const base::FilePath::CharType kDocRoot[] =
     FILE_PATH_LITERAL("chrome/test/data");
 
-const uint32_t kLargeVersionId = 0xFFFFFFu;
+const int kLargeVersionId = 0xFFFFFF;
 
 const char kHstsTestHostName[] = "hsts-example.test";
 
@@ -6642,6 +6642,7 @@ IN_PROC_BROWSER_TEST_P(
   // the certificate issued by our server won't match.
   auto config_proto =
       std::make_unique<chrome_browser_ssl::SSLErrorAssistantConfig>();
+  config_proto->set_version_id(kLargeVersionId);
   chrome_browser_ssl::MITMSoftware* mitm_software =
       config_proto->add_mitm_software();
   mitm_software->set_name(kTestMITMSoftwareName);
@@ -6650,7 +6651,8 @@ IN_PROC_BROWSER_TEST_P(
   mitm_software->set_issuer_organization_regex(
       "pattern-that-does-not-match-anything");
   SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-  ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() > 0);
+  ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+            kLargeVersionId);
 
   // Navigate to an unsafe page on the server. Mock out the URL host name to
   // equal the one set for HSTS.
@@ -6688,6 +6690,7 @@ IN_PROC_BROWSER_TEST_P(
   // the certificate issued by our server won't match.
   auto config_proto =
       std::make_unique<chrome_browser_ssl::SSLErrorAssistantConfig>();
+  config_proto->set_version_id(kLargeVersionId);
   chrome_browser_ssl::MITMSoftware* mitm_software =
       config_proto->add_mitm_software();
   mitm_software->set_name(kTestMITMSoftwareName);
@@ -6696,7 +6699,8 @@ IN_PROC_BROWSER_TEST_P(
   mitm_software->set_issuer_organization_regex(
       https_server()->GetCertificate().get()->issuer().organization_names[0]);
   SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-  ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() > 0);
+  ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+            kLargeVersionId);
 
   // Navigate to an unsafe page on the server. Mock out the URL host name to
   // equal the one set for HSTS.
@@ -6732,6 +6736,7 @@ IN_PROC_BROWSER_TEST_P(SSLUIMITMSoftwareEnabledTest,
   // the certificate issued by our server won't match.
   auto config_proto =
       std::make_unique<chrome_browser_ssl::SSLErrorAssistantConfig>();
+  config_proto->set_version_id(kLargeVersionId);
   chrome_browser_ssl::MITMSoftware* mitm_software =
       config_proto->add_mitm_software();
   mitm_software->set_name("Non-Matching MITM Software");
@@ -6740,7 +6745,8 @@ IN_PROC_BROWSER_TEST_P(SSLUIMITMSoftwareEnabledTest,
   mitm_software->set_issuer_organization_regex(
       "pattern-that-does-not-match-anything");
   SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-  ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() > 0);
+  ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+            kLargeVersionId);
 
   // Navigate to an unsafe page on the server. Mock out the URL host name to
   // equal the one set for HSTS.
@@ -6877,6 +6883,10 @@ IN_PROC_BROWSER_TEST_P(SSLUIMITMSoftwareEnabledTest, NotEnterpriseManaged) {
 // update will be ignored and a non-MITM interstitial will be shown.
 IN_PROC_BROWSER_TEST_P(SSLUIMITMSoftwareEnabledTest,
                        IgnoreDynamicUpdateWithSmallVersionId) {
+  auto config_proto =
+      SSLErrorAssistant::GetErrorAssistantProtoFromResourceBundle();
+  SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
+
   SetUpCertVerifier(net::CERT_STATUS_AUTHORITY_INVALID);
   SSLErrorHandler::SetEnterpriseManagedForTesting(false);
   ASSERT_TRUE(SSLErrorHandler::IsEnterpriseManagedFlagSetForTesting());
@@ -7382,12 +7392,13 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, Match) {
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
     AddMatchingDynamicInterstitial(config_proto.get());
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7410,6 +7421,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MatchUnknownCertError) {
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a matching dynamic interstitial with the UNKNOWN_CERT_ERROR status.
@@ -7419,8 +7431,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MatchUnknownCertError) {
         chrome_browser_ssl::DynamicInterstitial::UNKNOWN_CERT_ERROR);
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7444,6 +7456,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest,
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a matching dynamic interstitial with an empty issuer common name
@@ -7453,8 +7466,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest,
     match->set_issuer_common_name_regex(std::string());
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7478,6 +7491,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest,
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a matching dynamic interstitial with an empty issuer organization
@@ -7487,8 +7501,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest,
     match->set_issuer_organization_regex(std::string());
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7511,6 +7525,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchHash) {
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a dynamic interstitial with matching fields, except for the
@@ -7522,8 +7537,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchHash) {
     match->add_sha256_hash("sha256/flowerpiercer");
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7545,6 +7560,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchCertError) {
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a dynamic interstitial with matching fields, except for the
@@ -7555,8 +7571,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchCertError) {
         chrome_browser_ssl::DynamicInterstitial::ERR_CERT_DATE_INVALID);
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7578,6 +7594,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchCommonNameRegex) {
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a dynamic interstitial with matching fields, except for the
@@ -7587,8 +7604,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchCommonNameRegex) {
     match->set_issuer_common_name_regex("beeeater");
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7611,6 +7628,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest,
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a dynamic interstitial with matching fields, except for the
@@ -7620,8 +7638,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest,
     match->set_issuer_organization_regex("honeycreeper");
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
@@ -7643,6 +7661,7 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchWhenOverridable) {
   {
     std::unique_ptr<chrome_browser_ssl::SSLErrorAssistantConfig> config_proto =
         CreateSSLErrorAssistantConfig();
+    config_proto->set_version_id(kLargeVersionId);
     AddMismatchDynamicInterstitial(config_proto.get());
 
     // Add a matching dynamic interstitial, except for the
@@ -7653,8 +7672,8 @@ IN_PROC_BROWSER_TEST_F(SSLUIDynamicInterstitialTest, MismatchWhenOverridable) {
         chrome_browser_ssl::DynamicInterstitial::UNKNOWN_CERT_ERROR);
 
     SSLErrorHandler::SetErrorAssistantProto(std::move(config_proto));
-    ASSERT_TRUE(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting() >
-                0);
+    ASSERT_EQ(SSLErrorHandler::GetErrorAssistantProtoVersionIdForTesting(),
+              kLargeVersionId);
 
     ui_test_utils::NavigateToURL(browser(), https_server()->GetURL("/"));
     WaitForInterstitial(tab);
